TFP-5554: Fiks av test KunYtelseHistorikkTjenesteTest